# vae

./: README.md  pyproject.toml
vae/: vanilla_vae.ipynb
